# Swarm-TUI

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  findings-ledger.md
.github/workflows/: ci.yml
.swarm/: swarm.json
docs/: ARCHITECTURE.md  NOTES.md  PRODUCT.md
docs/adr/: 0001-per-cli-integration-strategy.md  0002-session-model-thin-registry.md  0003-tabs-and-panes-own-pty-layer.md  0004-peer-agent-composition.md  0005-language-and-tui-rust-ratatui.md  0006-adapter-boundary-extensibility.md  0007-input-routing-and-prefix-key.md  0008-suspend-codex-integration.md  0009-command-palette-and-launch-options.md  0010-swarm-plan-roles-file.md  0011-usage-view-probe-pane.md  0012-workspace-personalization-two-layer-plan.md  0013-programmatic-plane-dispatch-broadcast.md  0014-run-manifest-durable-store.md
docs/integrations/: antigravity.md  claude-code.md  codex.md  command-surfaces.md
docs/requirements/: 20-worker-tui-requirements.md
examples/: fidelity_spike.rs  shell_smoke.rs  slash_probe.rs
scripts/: verify-clis.sh
src/: main.rs
src/adapters/: antigravity.rs  claude_code.rs  codex.rs  mod.rs
src/app/: dispatch.rs  home.rs  keys.rs  mod.rs  palette.rs  promote.rs  reconcile.rs  session_view.rs  startup.rs  tabs.rs  usage.rs
src/core/: config.rs  events.rs  mod.rs  plan.rs  redact.rs  session.rs  task.rs
src/pty/: local.rs  mod.rs
src/store/: mod.rs
tests/fixtures/: agy_usage.synthetic.txt  claude_agents_all.synthetic.json  claude_stream.synthetic.ndjson  claude_usage.synthetic.txt
